--- a/app/src/main/res/layout/single_listing_main_layout.xml
+++ b/app/src/main/res/layout/single_listing_main_layout.xml
@@ -68,7 +68,7 @@
                 android:id="@+id/single_listing_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="I am looking for"
+                android:text="I am looking for: "
                 android:layout_marginTop="16dp"
                 android:textSize="14sp"
                 android:textColor="@color/text_color_dark"
@@ -98,7 +98,7 @@
                 android:layout_below="@+id/single_listing_tags"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Item description"
+                android:text="Item description: "
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="16dp"
                 android:textSize="14sp"
