--- a/app/src/main/res/layout/myoffers_pager_1.xml
+++ b/app/src/main/res/layout/myoffers_pager_1.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:scrollbars="vertical"
         android:layout_height="match_parent"
-        android:background="@color/myDrawerBackground"
+        android:background="@color/darkwhite"
         />
 
     </android.support.v4.widget.SwipeRefreshLayout>
