favorite button fixed chat image placeholder image fixed

--- a/app/src/main/res/layout/list_item_staggered.xml
+++ b/app/src/main/res/layout/list_item_staggered.xml
@@ -37,13 +37,12 @@
                 android:id="@+id/image_like_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/favorite_effect"
                 android:paddingTop="8dp"
                 android:paddingRight="8dp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:clickable="true"
-                android:background="@null"
+                android:background="@drawable/ic_favorite_not_selected"
                 />
 
             <de.hdodenhof.circleimageview.CircleImageView
