--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,12 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
-    <item android:id="@+id/action_search"
+    <item android:id="@+id/search"
         android:title="@string/action_search"
-        android:icon="@drawable/ic_action_search"
+        android:icon="@drawable/search"
         app:showAsAction="always"
-        />
+        app:actionViewClass="android.support.v7.widget.SearchView" />
+
 
     <item android:id="@+id/action_chat"
         android:title="Chat"
